GNOME Bugzilla – Bug 754878
API inconsistency issue
Last modified: 2016-12-19 18:11:33 UTC
Created attachment 311138 [details] NULL checking added in file gdk-pixbuf-scale.c & function header modified for gdk-pixbuf-util.c In gdk-pixbuf-scale.c file, gdk_pixbuf_rotate_simple() & gdk_pixbuf_flip() functions are public where user pass the GdkPixbuf *src while calling the functions. Inside both functions src pointer is derefrenced without being checked for NULL pointer. Since both are public APIs NULL check should be mandatory. For gdk-pixbuf-util.c file, function header of gdk_pixbuf_apply_embedded_orientation is changed since this function can also return NULL value. Note: Please find the patch for the above mentioned changes in the attachment
Created attachment 311139 [details] [review] PLease ignore the previous attachment PLease ignore the previous attachment.
Please provide git-formatted patches in the future.