gdk-pixbuf: Add NULL guards to some utility functions

https://bugzilla.gnome.org/show_bug.cgi?id=754878